--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-    "name": "alloy-bootstrap",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": "",
-    "author": "",
-    "license": "MIT",
-    "readmeFilename": "README.md",
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-coffee": "~0.7.0",
-        "grunt-contrib-watch": "~0.5.1",
-        "grunt-shell": "~0.5.0",
-        "grunt-ltss": "~0.1.2",
-        "grunt-notify": "~0.2.14",
-        "grunt-tishadow": "dbankier/grunt-tishadow",
-        "matchdep": "~0.3.0",
-        "ticons": "*",
-        "ti-stealth": "*"
-    }
+  "name": "alloy-bootstrap",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": "",
+  "author": "",
+  "license": "MIT",
+  "readmeFilename": "README.md",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-watch": "~0.5.1",
+    "grunt-notify": "~0.2.14",
+    "grunt-shell": "~0.5.0",
+    "grunt-stss": "^0.1.0",
+    "grunt-tishadow": "dbankier/grunt-tishadow",
+    "matchdep": "~0.3.0",
+    "ti-stealth": "*",
+    "ticons": "0.11.0"
+  }
 }
