--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,26 @@
-# OSX files
 .DS_Store
-
-# build stuff
 build.log
 build
-dist
-plugins
-Resources
-tmp
-
-# generated sourcecode files
-app/alloy.js
-app/controllers
-app/lib
-app/styles
-*.js.map
-
-#spec
-spec/**/*.js
-spec/**/*.js.map
-
-# npm stuff
-node_modules
+app
 npm-debug.log
+tmp
+Resources
 
-# editors stuff
-.map
-.project
-.settings
+# vendors
+plugins
+node_modules
+src/lib/vendor
 
 # project config
-app/config.json
+src/config.json
 
 # assets
 GooglePlay.png
 GooglePlayFeature.png
 iTunesConnect.png
-app/assets/iphone/*
-app/assets/images/*
-app/assets/android/*
-platform/android/res/**/*.png
-platform/android/res/**/*.jpg
-!platform/android/res/values/customtheme.xml
-
-# splashes config 2024x2024 res
-!app/assets/splashscreen-2024x2024.png
-
-# icons default config
-!app/assets/iphone/iTunesArtwork@2x.png
-!app/assets/iphone/iTunesArtwork@2x
-
-# icons android config
-!app/assets/android/appicon.png
-
-# assets config @3x max dpi
-!app/assets/iphone/images/*@3x.png
-!app/assets/iphone/images/*@3x.jpg
+platform/*
+!platform/android
+platform/android/*
+!platform/android/res
+platform/android/res/*
+!platform/android/res/values
